@@ -5,6 +5,23 @@ Rakefile
 TODO.txt
 bin/gamebox
 docs/logo.png
+lib/gamebox.rb
+lib/gamebox/actor.rb
+lib/gamebox/actor_factory.rb
+lib/gamebox/actor_view.rb
+lib/gamebox/behavior.rb
+lib/gamebox/config_manager.rb
+lib/gamebox/director.rb
+lib/gamebox/gamebox_application.rb
+lib/gamebox/input_manager.rb
+lib/gamebox/level.rb
+lib/gamebox/mode.rb
+lib/gamebox/mode_manager.rb
+lib/gamebox/physical.rb
+lib/gamebox/physical_level.rb
+lib/gamebox/physics.rb
+lib/gamebox/resource_manager.rb
+lib/gamebox/sound_manager.rb
 lib/gamebox/template_app/README
 lib/gamebox/template_app/Rakefile
 lib/gamebox/template_app/config/boot.rb
@@ -13,6 +30,10 @@ lib/gamebox/template_app/config/game.yml
 lib/gamebox/template_app/config/objects.yml
 lib/gamebox/template_app/crate_boot.c
 lib/gamebox/template_app/crate_boot.h
+lib/gamebox/template_app/data/graphics/GRAPHICS_GO_HERE
+lib/gamebox/template_app/data/music/MUSIC_GOES_HERE
+lib/gamebox/template_app/data/music/current_rider.ogg
+lib/gamebox/template_app/data/sounds/SOUND_FX_GO_HERE
 lib/gamebox/template_app/doc/README_FOR_APP
 lib/gamebox/template_app/lib/code_statistics.rb
 lib/gamebox/template_app/lib/crate_override.rb
@@ -30,15 +51,7 @@ lib/gamebox/template_app/recipes/ruby/ruby.rake
 lib/gamebox/template_app/recipes/rubygame/rubygame.rake
 lib/gamebox/template_app/recipes/rubygems/rubygems.rake
 lib/gamebox/template_app/recipes/zlib/zlib.rake
-lib/gamebox/template_app/src/.level.rb.swp
-lib/gamebox/template_app/src/actor.rb
 lib/gamebox/template_app/src/app.rb
-lib/gamebox/template_app/src/config_manager.rb
-lib/gamebox/template_app/src/director.rb
 lib/gamebox/template_app/src/game.rb
-lib/gamebox/template_app/src/input_manager.rb
-lib/gamebox/template_app/src/level.rb
-lib/gamebox/template_app/src/resource_manager.rb
-lib/gamebox/template_app/src/sound_manager.rb
-lib/gamebox/template_app/src/wrapped_screen.rb
 lib/gamebox/version.rb
+lib/gamebox/wrapped_screen.rb
