@@ -1,0 +1,4 @@
+$: << File.dirname(__FILE__)+"/gamebox"
+
+# TODO or I could include all my files here... ug
+require 'gamebox_application'
