@@ -1,9 +1,10 @@
 ADDITIONAL_LOAD_PATHS = []
+# ../.. is only here for gamebox dev XXX
 ADDITIONAL_LOAD_PATHS.concat %w(
-  ..
   src 
   lib
   config 
+  ../..
 ).map { |dir| File.dirname(__FILE__) + "/../" + dir }.select { |dir| File.directory?(dir) }
 
 ADDITIONAL_LOAD_PATHS.each do |path|
