@@ -2,7 +2,7 @@
 $: << "#{File.dirname(__FILE__)}/../config"
 
 require 'environment'
-require 'gamebox_application'
+require 'gamebox'
 
 if $0 == __FILE__
   GameboxApp.run ARGV, ENV
